--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
   },
   "dependencies": {
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "http": "0.0.1-security",
     "socket.io": "^4.7.3"
   }
 }
